Fixed errors Added functionality to save all URLs of the current window Refactored code

--- a/manifest.json
+++ b/manifest.json
@@ -6,7 +6,8 @@
         "activeTab",
         "storage",
         "identity",
-        "notifications"
+        "notifications",
+        "tabs"
     ],
     "host_permissions": [
         "https://docs.googleapis.com/"
