--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install google-auth-oauthlib google-auth-httplib2
+          pip install google-auth-oauthlib google-auth-httplib2 \
           google-api-python-client
 
       - name: Create ZIP file
