--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,15 +1,12 @@
 ---
 name: Deploy Chrome Extension
 on:
-  push:
-    tags:
-      - 'v*'
   workflow_dispatch:
     inputs:
       version:
-        description: 'Version to deploy (e.g., v1.0)'
+        description: 'Version to deploy (e.g., v1.0.0)'
         required: true
-        default: 'v1.0'
+        default: 'v1.0.0'
 
 jobs:
   deploy:
@@ -32,9 +29,12 @@ jobs:
         run: zip -r extension.zip * -x "*.git*"
 
       - name: Decode OAuth
-        run: echo ${{ secrets.OAUTH_CLIENT_UPLOAD }} > oauth_client_file.json
+        run: |
+          echo ${{ secrets.OAUTH_CLIENT_UPLOAD }} | \
+          base64 --decode > oauth_client_file.json
 
       - name: Deploy to Chrome Web Store
         env:
           EXTENSION_ID: ${{ secrets.CHROME_WEBSTORE_EXTENSION_ID }}
+          VERSION_ID: ${{ github.event.input.version }}
         run: python .github/workflows/deploy_script.py
