--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,23 +9,25 @@ on:
         default: 'v1.0.0'
 
 jobs:
-  deploy:
+  build:
+    name: Publish webextension
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Install Node.js
-        uses: actions/setup-node@v4
-
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 20
+      - name: Build
+        run: |
+          npm ci
+          npm run build
       - name: Create ZIP file
         run: zip -r extension.zip * -x "*.git*"
-
-      - name: Publish to Chrome Web Store
-        uses: fregante/chrome-webstore-upload@v1
+      - name: Upload & release
+        uses: mnao305/chrome-extension-upload@v5.0.0
         with:
+          file-path: extension.zip
+          extension-id: ${{ secrets.CHROME_WEBSTORE_EXTENSION_ID }}
           client-id: ${{ secrets.CLIENT_ID }}
           client-secret: ${{ secrets.CLIENT_SECRET }}
           refresh-token: ${{ secrets.REFRESH_TOKEN }}
-          extension-id: ${{ secrets.CHROME_WEBSTORE_EXTENSION_ID }}
-          source: './extension.zip'
