--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,14 +13,12 @@ jobs:
     name: Publish webextension
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-node@v4
-        with:
-          node-version: 20
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Setup node
+        uses: actions/setup-node@v4
       - name: Build
-        run: |
-          npm ci
-          npm run build
+        run: npm run build
       - name: Create ZIP file
         run: zip -r extension.zip * -x "*.git*"
       - name: Upload & release
