--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,7 @@ jobs:
         uses: mnao305/chrome-extension-upload@v5.0.0
         with:
           file-path: extension.zip
-          extension-id: ${{ secrets.CHROME_WEBSTORE_EXTENSION_ID }}
+          extension-id: ${{ secrets.EXTENSION_ID }}
           client-id: ${{ secrets.CLIENT_ID }}
           client-secret: ${{ secrets.CLIENT_SECRET }}
           refresh-token: ${{ secrets.REFRESH_TOKEN }}
